--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
         </form>
     </div>
 </body>
-<script type="text/javascript" src="/index.js"></script>
+<script type="text/javascript" src="./index.js"></script>
 </html>
