--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="table">
             <h1 class="info coll__left">Имя</h1>
             <h1 class="info coll__rigth">Телефон</h1>
-            <ul id="list"></ul>
+            <ul class="listt" id="list"></ul>
         </div>
         <form class="contacts" id="myForm">
             <label for="" class="detalis">
